# tl

./: .gitignore  Cargo.toml  README.md
docs/plans/: 2026-03-01-tl-design.md  2026-03-01-tl-implementation-plan.md
src/: lib.rs  main.rs
src/collection/: manifest.rs  mod.rs  path.rs  provider.rs  velociraptor.rs
src/detection/: engine.rs  matcher.rs  mod.rs  rule_cache.rs  sigma_rule.rs
src/export/: bodyfile_export.rs  csv_export.rs  json_export.rs  mod.rs
src/parsers/: activities_parser.rs  amcache_parser.rs  autorun_parser.rs  bam_parser.rs  browser_parser.rs  evtx_parser.rs  jumplist_parser.rs  lnk_parser.rs  logfile_parser.rs  mft_parser.rs  mod.rs  mru_parser.rs  network_parser.rs  posh_history_parser.rs  prefetch_parser.rs  rdp_cache_parser.rs  recycle_bin_parser.rs  schtask_parser.rs  services_parser.rs  shellbag_parser.rs  shimcache_parser.rs  srum_parser.rs  user_registry_parser.rs  userassist_parser.rs  usn_parser.rs  wmi_parser.rs
src/timeline/: entry.rs  store.rs
src/tui/: app.rs  keybindings.rs  mod.rs  timeline_view.rs
tests/: bodyfile_export.rs  csv_export.rs  json_export.rs  mft_timeline.rs  path_normalization.rs  usn_parser.rs  velociraptor_provider.rs
